# enda-loyalty-mcp-server

./: .env.example  .gitignore  Cargo.toml  README.md  package-lock.json  package.json
app/components/: ChatBox.tsx
app/services/: aiService.ts
app/types/: message.ts
backend/: Cargo.toml
backend/src/: config.rs  main.rs  models.rs
backend/src/services/: mcp_client.rs  mod.rs  openrouter.rs  tools.rs
frontend/: index.html  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/components/: ChatBox.tsx  Message.tsx
frontend/app/services/: aiService.ts
frontend/app/types/: message.ts
frontend/src/: App.tsx
frontend/src/components/: ChatBox.tsx  Message.tsx
frontend/src/services/: aiService.ts
frontend/src/types/: message.ts
mcp/: .env.example  Cargo.toml  README.md
mcp/src/: api_client.rs  auth.rs  config.rs  main.rs  models.rs  server.rs  service.rs
src/: api_client.rs  auth.rs  config.rs  database.rs  main.rs  models.rs  server.rs  service.rs  tools.rs
src/services/: mcp_client.rs  mod.rs  openrouter.rs  tools.rs
src/tools/: mod.rs
