[package]
name = "enda-loyalty-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
tokio ={version = "1", features = ["full"]}
rmcp = { version = "1", features = ["server", "transport-io"] }

sqlx = { version = "0.8", features = ["runtime-tokio", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

schemars = "1"