[package]
name = "enda-loyalty-mcp-server"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13", features = ["json"] }
tokio ={version = "1", features = ["full"]}
rmcp = { version = "2", features = ["server", "transport-io"] }

sqlx = { version = "0.9", features = ["runtime-tokio", "postgres"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

schemars = "1"